# tadred

./: LICENSE  README.md  pyproject.toml  run_commandline.py
tadred/: data_processing.py  layers.py  networks.py  tadred_main.py  trainer.py  types.py  utils.py
